infrastructure/nexus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-server
  template:
    metadata:
      labels:
        app: nexus-server
    spec:
      containers:
        - name: nexus
          image: sonatype/nexus3:3.70.4
          resources:
            limits:
              memory: "4Gi"
              cpu: "1000m"
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8081
          startupProbe:
            httpGet:
              path: /service/rest/v1/status
              port: 8081
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /service/rest/v1/status
              port: 8081
            periodSeconds: 30
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /service/rest/v1/status
              port: 8081
            periodSeconds: 30
      #     volumeMounts:
      #       - name: nexus-data
      #         mountPath: /nexus-data
      # volumes:
      #   - name: nexus-data
      #     persistentVolumeClaim:
      #       claimName: azurefile-nfs-claim
